--- a/less/main-page.less
+++ b/less/main-page.less
@@ -57,6 +57,7 @@ header {
                 
                 a {
                     padding-right: 10%;
+                    white-space: nowrap;
                 }
             }
             
@@ -120,6 +121,7 @@ section {
         @media @tablet {
             width: 30%;
             border-right: 1px dashed gray;
+            border-bottom: none;
         }
         
         display: flex;
